--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 
 @layer base {
   * {
-    @apply border border-gray-300 outline-none ring ring-gray-500 ring-opacity-[0.5];
+  @apply border border-gray-300 outline-none ring ring-gray-500 ring-opacity-[0.5];
+     @apply border border-gray-300 outline-none ring ring-gray-500;
   }
   body {
     @apply bg-background text-foreground;
